appId: com.hewadadil.pantrypal
---
- runFlow:
    when:
      visible: "Everything you need, ready when you are."
    file: welcome-to-sign-in.yaml

- runFlow:
    when:
      visible: "Welcome back"
    commands:
      - tapOn:
          text: "Email"
      - inputText: ${MAESTRO_EMAIL}
      - tapOn:
          text: "Password"
      - inputText: ${MAESTRO_PASSWORD}
      - tapOn:
          text: "Sign in"
      - tapOn:
          text: "Not Now"
          optional: true

- extendedWaitUntil:
    visible: "Items to Buy"
    timeout: 90000
