appId: com.hewadadil.pantrypal
---
- assertVisible: "Items to Buy"
- assertVisible: "Pantry Items"
- tapOn: "Shopping"
- extendedWaitUntil:
    visible: "Shopping"
    timeout: 15000
- tapOn: "Stores"
- extendedWaitUntil:
    visible: "Where you shop"
    timeout: 15000
- tapOn: "Receipts"
- extendedWaitUntil:
    visible: "Spending"
    timeout: 15000
- tapOn: "Activity"
- extendedWaitUntil:
    visible: "History"
    timeout: 15000
- tapOn: "Home"
- extendedWaitUntil:
    visible: "Items to Buy"
    timeout: 15000
